# findrec

./: BUILDING  CMakeLists.txt  Doxyfile  filematch.cpp  filematch.h  findfiles.h  main.cpp
src/: CMakeLists.txt  filematch.cpp  filematch.h  findfiles.cpp  findfiles.h  main.cpp
